Compatibility with both Cygwin and Windows!

--- a/foneOS/CMakeLists.txt
+++ b/foneOS/CMakeLists.txt
@@ -18,15 +18,12 @@ file(GLOB foneOS_src
 add_executable(foneOS ${foneOS_src})
 
 target_link_libraries(foneOS
-	PRIVATE "${SDL2_LIBRARIES}"
-	PRIVATE "${SQLITE3_LIBRARIES}"
-	PRIVATE "${FREETYPE_LIBRARIES}"
+	PRIVATE "${SDL2_LIBRARY_RELEASE}"
+	PRIVATE "${SQLITE3_LIBRARY_RELEASE}"
+	PRIVATE "${FREETYPE_LIBRARY_RELEASE}"
 )
 
-include_directories("${SDL2_INCLUDE_DIRS};${SQLITE3_INCLUDE_DIRS};${FREETYPE_INCLUDE_DIRS};")
+include_directories("${SDL2_INCLUDE_DIR};${SQLITE3_INCLUDE_DIR};${FREETYPE_INCLUDE_DIR};")
 # target_compile_options(foneOS "${SDL2_CFLAGS_OTHERS} ${SQLITE3_CFLAGS_OTHERS} ${FREETYPE_CFLAGS_OTHERS}")
 
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
-
-get_property(dirs DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR} PROPERTY INCLUDE_DIRECTORIES)
-message("dirs = ${dirs}")
