--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,9 +3,7 @@ project (foneOS)
 
 list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_LIST_DIR}")
 
-find_package(PkgConfig REQUIRED)
-pkg_search_module(SDL2 REQUIRED sdl2)
-
+find_package(SDL2 REQUIRED)
 find_package(freetype REQUIRED)
 find_package(Sqlite3 REQUIRED)
 
