--- a/foneOS/CMakeLists.txt
+++ b/foneOS/CMakeLists.txt
@@ -21,9 +21,10 @@ target_link_libraries(foneOS
 	PRIVATE "${SDL2_LIBRARY_RELEASE}"
 	PRIVATE "${SQLITE3_LIBRARY_RELEASE}"
 	PRIVATE "${FREETYPE_LIBRARY_RELEASE}"
+	PRIVATE "${LUAJIT_LIBRARY_RELEASE}"
 )
 
-include_directories("${SDL2_INCLUDE_DIR};${SQLITE3_INCLUDE_DIR};${FREETYPE_INCLUDE_DIR};")
+include_directories("${SDL2_INCLUDE_DIR};${SQLITE3_INCLUDE_DIR};${FREETYPE_INCLUDE_DIR};${LUAJIT_INCLUDE_DIR};")
 # target_compile_options(foneOS "${SDL2_CFLAGS_OTHERS} ${SQLITE3_CFLAGS_OTHERS} ${FREETYPE_CFLAGS_OTHERS}")
 
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
