It can initialize the display....

--- a/foneOS/CMakeLists.txt
+++ b/foneOS/CMakeLists.txt
@@ -1,7 +1,7 @@
 include_directories("${PROJECT_SOURCE_DIR}")
 link_directories(${PROJECT_BINARY_DIR})
 
-set(CORELIBS ${FREETYPE_LIBRARY} ${SQLITE3_LIBRARY} ${SDL2_LIBRARY})
+set(CORELIBS ${FREETYPE_LIBRARY} ${SQLITE3_LIBRARY} ${SDL2_LIBRARY} ${MRAA_LIBRARY} )
  
 # configure a header file to pass some of the CMake settings
 # to the source code
@@ -19,12 +19,13 @@ add_executable(foneOS ${foneOS_src})
 
 target_link_libraries(foneOS
 	PRIVATE "${SDL2_LIBRARY_RELEASE}"
+	PRIVATE "${MRAA_LIBRARY_RELEASE}"
 	PRIVATE "${SQLITE3_LIBRARY_RELEASE}"
 	PRIVATE "${FREETYPE_LIBRARY_RELEASE}"
 	PRIVATE "${LUAJIT_LIBRARY_RELEASE}"
 )
 
-include_directories("${SDL2_INCLUDE_DIR};${SQLITE3_INCLUDE_DIR};${FREETYPE_INCLUDE_DIR};${LUAJIT_INCLUDE_DIR};")
+include_directories("${SDL2_INCLUDE_DIR};${MRAA_INCLUDE_DIR};${SQLITE3_INCLUDE_DIR};${FREETYPE_INCLUDE_DIR};${LUAJIT_INCLUDE_DIR};")
 # target_compile_options(foneOS "${SDL2_CFLAGS_OTHERS} ${SQLITE3_CFLAGS_OTHERS} ${FREETYPE_CFLAGS_OTHERS}")
 
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
