--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,9 +12,12 @@ list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_LIST_DIR}/cmake")
 
 if (!EDISON_BUILD)
 	find_package(SDL2 REQUIRED)
+	set(MRAA_LIBRARY )
+	set(MRAA_LIBRARY_RELEASE )
 else(!EDISON_BUILD)
 	set(SDL2_LIBRARY )
 	set(SDL2_LIBRARY_RELEASE )
+	find_package(MRAA REQUIRED)
 endif(!EDISON_BUILD)
 find_package(freetype REQUIRED)
 find_package(Sqlite3 REQUIRED)
