--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,15 +10,15 @@ project (foneOS)
 
 list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_LIST_DIR}/cmake")
 
-if (!EDISON_BUILD)
+if (NOT EDISON_BUILD)
 	find_package(SDL2 REQUIRED)
 	set(MRAA_LIBRARY )
 	set(MRAA_LIBRARY_RELEASE )
-else(!EDISON_BUILD)
+else()
 	set(SDL2_LIBRARY )
 	set(SDL2_LIBRARY_RELEASE )
 	find_package(MRAA REQUIRED)
-endif(!EDISON_BUILD)
+endif()
 find_package(freetype REQUIRED)
 find_package(Sqlite3 REQUIRED)
 find_package(LuaJIT REQUIRED)
