Fix CMake errors on Windows

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,11 +12,13 @@ list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_LIST_DIR}/cmake")
 
 if (NOT EDISON_BUILD)
 	find_package(SDL2 REQUIRED)
-	set(MRAA_LIBRARY )
-	set(MRAA_LIBRARY_RELEASE )
+	set(MRAA_LIBRARY "")
+	set(MRAA_LIBRARY_RELEASE "")
+	set(MRAA_INCLUDE_DIR "")
 else()
-	set(SDL2_LIBRARY )
-	set(SDL2_LIBRARY_RELEASE )
+	set(SDL2_LIBRARY "")
+	set(SDL2_LIBRARY_RELEASE "")
+	set(SDL2_INCLUDE_DIR "")
 	find_package(MRAA REQUIRED)
 endif()
 find_package(FreeType REQUIRED)
