--- a/wercker.yml
+++ b/wercker.yml
@@ -1,8 +1,5 @@
-# This references a standard debian container from the
-# Docker Hub https://registry.hub.docker.com/_/debian/
-# Read more about containers on our dev center
-# http://devcenter.wercker.com/docs/containers/index.html
-box: debian
+# use ubuntu trusty
+box: ubuntu:14.04
 # You can also use services such as databases. Read more on our dev center:
 # http://devcenter.wercker.com/docs/services/index.html
 # services:
