--- a/wercker.yml
+++ b/wercker.yml
@@ -13,11 +13,15 @@ box: ubuntu:14.04
 # Read more about pipelines on our dev center
 # http://devcenter.wercker.com/docs/pipelines/index.html
 build:
-    # Steps make up the actions in your pipeline
-    # Read more about steps on our dev center:
-    # http://devcenter.wercker.com/docs/steps/index.html
+  box:
+    id: thatoddmailbox/friendly-docker-container
+    tag: latest
   steps:
     - script:
-        name: echo
+        name: CMake
         code: |
-          echo "hello world!"
+          cmake . -DSDL2_INCLUDE_DIR=/usr/local/include/SDL2 -DFREETYPE_INCLUDE_DIR=/usr/include/freetype2 -DLUAJIT_INCLUDE_DIR=/usr/include/luajit-2.0 -DLUAJIT_LIBRARY_RELEASE=/usr/lib/x86_64-linux-gnu/libluajit-5.1.so -DLUAJIT_LIBRARY_DEBUG=/usr/lib/x86_64-linux-gnu/libluajit-5.1.so
+    - script:
+        name: Make
+        code: |
+          make VERBOSE=1
