this should finally fix builds on Edison

--- a/foneOS/CMakeLists.txt
+++ b/foneOS/CMakeLists.txt
@@ -35,7 +35,7 @@ if(${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
 	set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -pagezero_size 10000 -image_base 100000000")
 endif(${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
 
-if (EDISON_BUILD)
-file(RELATIVE_PATH relativeDir ${PROJECT_SOURCE_DIR} ${PROJECT_BINARY_DIR}/foneOS)
-add_deployment_file(${relativeDir} ${deploymentFolderAbsolutPath})
-endif(EDISON_BUILD)
+if (EDISON_BUILD AND (NOT ${CMAKE_SYSTEM_VERSION} EQUAL 3.10.17-poky-edison+))
+	file(RELATIVE_PATH relativeDir ${PROJECT_SOURCE_DIR} ${PROJECT_BINARY_DIR}/foneOS)
+	add_deployment_file(${relativeDir} ${deploymentFolderAbsolutPath})
+endif(EDISON_BUILD AND (NOT ${CMAKE_SYSTEM_VERSION} EQUAL 3.10.17-poky-edison+))
